--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -1,4 +1,4 @@
-body {
+body.index {
 	padding-top: 90px;
 }
 
@@ -24,4 +24,26 @@ footer div.col-lg-12 {
 img.screen {
 	padding: 7px;
 	border: 1px dashed rgb(213, 210, 210);
+}
+
+.ng-enter {
+	transition: 0.5s;
+	opacity: 0;
+}
+
+.ng-enter-active {
+	opacity: 1;
+}
+
+.ng-leave {
+	transition: 0.5s;
+	opacity: 1;
+}
+
+.ng-leave-active {
+	opacity: 0;
+}
+
+input.ng-invalid.ng-dirty {
+	border-color: red;
 }
