--- a/src/main/webapp/templates/view.html
+++ b/src/main/webapp/templates/view.html
@@ -15,7 +15,7 @@
 		<tbody>
 			<tr data-ng-repeat="web in webs">
 				<td>
-					<a href="/rest/fetch/{{userEmail}}/{{web.name}}">
+					<a href="rest/fetch/{{userEmail}}/{{web.name}}">
 						{{web.name}}
 					</a>
 				</td>
